--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.6",
         "magento/framework": ">=100.0.4",
-        "semknox/semknox-core": "*"
+        "semknox/semknox-core": ">=3.0.3"
     },
     "autoload": {
         "files": [
