--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "semknox/semknox-magento2",
-    "description": "This is the Semknox ProductSearch module for Magento 2",
+    "description": "This is the SEMKNOX SiteSearch360 module for Magento 2",
     "homepage": "https://www.semknox.com",
     "version": "3.1.1",
     "type": "magento2-module",
