--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "semknox/semknox-magento2",
     "description": "This is the SEMKNOX SiteSearch360 module for Magento 2",
     "homepage": "https://www.semknox.com",
-    "version": "3.1.11",
+    "version": "3.1.12",
     "type": "magento2-module",
     "keywords": [
         "semknox",
@@ -19,6 +19,12 @@
         "magento/framework": ">=100.0.4",
         "semknox/semknox-core": ">=3.2.4"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@bitbucket.org:SEMKNOX/semknox-php-extension-core"
+        }
+    ],
     "autoload": {
         "files": [
             "registration.php"
